# word-clone

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: runtime_config.h
include/wordle_clone/: char_status.h  runtime_config.h
src/: CMakeLists.txt  main.cpp  runtime_config.cpp
src/wordle_clone/: CMakeLists.txt  char_status.cpp  runtime_config.cpp
